--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 .venv
 *.ttf
 *.otf
+
+
+local ocbf = require("ocbf")
+local braille = require("braille")
+
+local matrix = braille.matrix(320, 200)
+
+local font1 = ocbf.load("eBox", "Regular")
+
+local function set(x, y, v)
+  braille.set(matrix, x, y, v)
+end
+
+font1:draw(set, 64, "ZXC", 4, 1)
+
+braille.render(matrix, 1, 1)
